--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,8 @@
 * {
 	margin: 0;
 	padding: 0;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 }
 @font-face {
 	font-family: "Inter";
@@ -45,6 +46,7 @@ button {
     line-height: 48px;
     height: 52px;
 	padding: 0 16px;
+	-webkit-transition: all .1s ease;
 	transition: all .1s ease;
 }
 button.btn-border {
@@ -70,7 +72,8 @@ button:hover {
 .head-pc-menu {
 	width: 100%;
 	background: linear-gradient(to bottom, #f6f7f8 0%, #f6f7f8 40px, #fff 40px, #fff 100%);
-	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 	z-index: 3;
 	font-family: "Inter", sans-serif;
 	font-size: 16px;
@@ -140,9 +143,15 @@ button:hover {
 }
 .head-left-menu, .head-right-links > .hrl-nav {
 	height: 40px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: flex-start;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
 }
 .head-pc-menu .head-grid .head-menu-level-1 {
 	grid-column: span 2;
@@ -159,9 +168,15 @@ button:hover {
 	margin-left: 24px;
 }
 .head-menu-level-1 {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: flex-start;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
 }
 .head-menu-level-1 .top-sub-menu-nav a:hover {
     color: #ea212e;
@@ -201,7 +216,8 @@ button:hover {
 	position: absolute;
 	left: 0;
 	width: 100%;
-	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 	background: linear-gradient(to bottom, #f1f1f1 0%, #f1f1f1 1px, #fff 1px, #fff 100%);
 }
 svg:not(:root) {
@@ -217,7 +233,9 @@ svg:not(:root) {
 }
 
 .head-menu-level-1 .tabs-area {
-	flex-grow: 1;
+	-webkit-box-flex: 1;
+	    -ms-flex-positive: 1;
+	        flex-grow: 1;
 	margin-left: 64px;
 	margin-right: 32px;
 }
@@ -228,9 +246,15 @@ svg:not(:root) {
 	display: block;
 }
 .head-menu-level-1 .top-sub-menu-nav {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: flex-start;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
 }
 .head-menu-level-1 .top-sub-menu-nav > * {
 	color: #343a40;
@@ -258,14 +282,21 @@ svg:not(:root) {
 	position: absolute;
 	left: 0;
 	width: 100%;
-	box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	-webkit-box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+	        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
 	background: linear-gradient(to bottom, #f1f1f1 0%, #f1f1f1 1px, #fff 1px, #fff 100%);
 	z-index: 2;
 }
 .float-area-bnr-flex {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: flex-start;
-	justify-content: flex-start;
+	-webkit-box-align: start;
+	    -ms-flex-align: start;
+	        align-items: flex-start;
+	-webkit-box-pack: start;
+	    -ms-flex-pack: start;
+	        justify-content: flex-start;
 }
 .float-area > * {
 	padding-top: 33px;
@@ -311,9 +342,15 @@ svg:not(:root) {
     margin-bottom: 28px;
     font-weight: normal;
     color: #666c72;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
 }
 .float-area-bnr-flex > *:nth-child(2) .bnr-points > *:first-child {
     width: 160px;
@@ -332,9 +369,15 @@ svg:not(:root) {
 }
 
 .head-right-float-flex {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-start;
-    justify-content: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     font-size: 14px;
     line-height: 1;
 }
@@ -370,9 +413,15 @@ svg:not(:root) {
 	.head-mob-menu {
 		border-bottom: solid 1px #f2f2f2;
 		padding: 12px 16px;
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		align-items: center;
-		justify-content: flex-start;
+		-webkit-box-align: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-box-pack: start;
+		    -ms-flex-pack: start;
+		        justify-content: flex-start;
 	}
 	.head-mob-menu .top-menu-open-btn {
 		font-size: 14px;
@@ -397,8 +446,13 @@ svg:not(:root) {
 	.head-right-links > .hrl-nav {
 		height: auto;
 		padding: 16px 0;
-		flex-direction: column;
-		align-items: stretch;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: stretch;
+		    -ms-flex-align: stretch;
+		        align-items: stretch;
 	}
 	.head-right-links > .hrl-nav > * {
 		margin-left: 0;
@@ -496,14 +550,21 @@ svg:not(:root) {
 }
 .side-menu {
 	position: relative;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     height: 100%;
 	-webkit-transform: translateX(calc(-100% - 32px));
     transform: translateX(calc(-100% - 32px));
     transition: left .35s ease-in,-webkit-transform .35s ease-in;
+    -webkit-transition: left .35s ease-in,-webkit-transform .35s ease-in;
     transition: transform .35s ease-in,left .35s ease-in;
     transition: transform .35s ease-in,left .35s ease-in,-webkit-transform .35s ease-in;
     pointer-events: all;
@@ -526,7 +587,9 @@ svg:not(:root) {
     -webkit-transform: translate3d(0,0,0);
     transform: translate3d(0,0,0);
     transition: visibility 0s, opacity .25s ease-in,-webkit-transform 0s linear .25s;
+    -webkit-transition: visibility 0s, opacity .25s ease-in,-webkit-transform 0s linear .25s;
     transition: visibility 0s, opacity .25s ease-in,transform 0s linear .25s;
+    transition: visibility 0s, opacity .25s ease-in,transform 0s linear .25s, -webkit-transform 0s linear .25s;
     transition: visibility 0s, opacity .25s ease-in,transform 0s linear .25s,-webkit-transform 0s linear .25s;
 }
 .side-menu.side-menu__wrapper-dark:before {
@@ -536,24 +599,38 @@ svg:not(:root) {
 }
 .side-menu__inner {
     position: relative;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
     height: 100%;
     -webkit-transform: translateX(0);
     transform: translateX(0);
     transition: left .35s ease-in,-webkit-transform .35s ease-in;
+    -webkit-transition: left .35s ease-in,-webkit-transform .35s ease-in;
     transition: transform .35s ease-in,left .35s ease-in;
     transition: transform .35s ease-in,left .35s ease-in,-webkit-transform .35s ease-in;
     pointer-events: all;
     -webkit-tap-highlight-color: transparent;
 }
 .side-menu__top {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-shrink: 0;
-    align-items: center;
-    justify-content: space-between;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     height: 57px;
     background-color: #f5f5f6;
     color: #333;
@@ -569,13 +646,18 @@ svg:not(:root) {
   padding-left: 24px;
 }
 .side-menu__top .logo {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
-    flex-shrink: 0;
+    -ms-flex-negative: 0;
+        flex-shrink: 0;
     color: currentColor;
 }
 .side-menu__top .close {
     position: relative;
     right: -16px;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
     display: inline-flex;
     margin-left: auto;
     padding: 10px 16px;
@@ -588,14 +670,16 @@ svg:not(:root) {
 }
 .side-menu__content-inner {
 	position: relative;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
     padding-top: 8px;
     padding-bottom: 64px;
     min-height: 100%;
 }
 .side-menu__item {
     display: block;
-	box-shadow: inset 0 -1px 0 0 #e7e8ea;
+	-webkit-box-shadow: inset 0 -1px 0 0 #e7e8ea;
+	        box-shadow: inset 0 -1px 0 0 #e7e8ea;
 	outline: 0;
     text-decoration: none;
 }
@@ -606,9 +690,15 @@ svg:not(:root) {
 	font-family: haas,pragmatica,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
 	font-weight: 400;
 	letter-spacing: .4px;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-	align-items: center;
-	justify-content: space-between;
+	-webkit-box-align: center;
+	    -ms-flex-align: center;
+	        align-items: center;
+	-webkit-box-pack: justify;
+	    -ms-flex-pack: justify;
+	        justify-content: space-between;
 	height: 44px;
 	color: #333;
 }
@@ -619,14 +709,21 @@ svg:not(:root) {
 	display: inline-block;
 	max-width: 100%;
 	max-height: 100%;
-	transition-duration: .2s;
-	transition-timing-function: ease;
+	-webkit-transition-duration: .2s;
+	        transition-duration: .2s;
+	-webkit-transition-timing-function: ease;
+	        transition-timing-function: ease;
+	-webkit-transition-property: background-color,color;
 	transition-property: background-color,color;
+	-webkit-transition: -webkit-transform .25s ease;
+	transition: -webkit-transform .25s ease;
 	transition: transform .25s ease;
+	transition: transform .25s ease, -webkit-transform .25s ease;
 	color: #959ba4;
 }
 .item-top__dropdown-rotate {
-	transform: rotate(180deg);
+	-webkit-transform: rotate(180deg);
+	        transform: rotate(180deg);
 }
 .side-menu__item .item-dropdown {
 	overflow: hidden;
@@ -646,9 +743,14 @@ svg:not(:root) {
 	padding-top: 4px;
 }
 .side-menu__item .item-dropdown__link {
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 12px 16px 10px;
 	text-decoration: none;
 }
